tests/negative/std/thread_queue_type_errors.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that SharedQueue preserves its generic element type across enqueue and dequeue.

import { SharedQueue } from "std:thread";

function main(): void {
    let jobs = new SharedQueue<int>();
    jobs.enqueue("task");
    let label: string = jobs.dequeue();
}
